@@ -292,7 +292,7 @@ DEFINE_TESTCASE(replicate1, replicas) {
 
     // Apply the replication - we don't have changesets stored, so this should
     // just do a database copy, and return a count of 1.
-    int count = replicate(master, replica, tempdir, 0, 1, 1);
+    int count = replicate(master, replica, tempdir, 0, 1, true);
     TEST_EQUAL(count, 1);
     {
 	Xapian::Database dbcopy(replicapath);
@@ -301,7 +301,7 @@ DEFINE_TESTCASE(replicate1, replicas) {
 
     // Repeating the replication should return a count of 1, since no further
     // changes should need to be applied.
-    count = replicate(master, replica, tempdir, 0, 0, 0);
+    count = replicate(master, replica, tempdir, 0, 0, false);
     TEST_EQUAL(count, 1);
     {
 	Xapian::Database dbcopy(replicapath);
@@ -312,7 +312,7 @@ DEFINE_TESTCASE(replicate1, replicas) {
     // to occur, whether it was needed or not.  Fixed in revision #10117.
     replica.close();
     replica = Xapian::DatabaseReplica(replicapath);
-    count = replicate(master, replica, tempdir, 0, 0, 0);
+    count = replicate(master, replica, tempdir, 0, 0, false);
     TEST_EQUAL(count, 1);
     {
 	Xapian::Database dbcopy(replicapath);
@@ -324,7 +324,7 @@ DEFINE_TESTCASE(replicate1, replicas) {
     orig.add_document(doc1);
     orig.commit();
 
-    count = replicate(master, replica, tempdir, 2, 0, 1);
+    count = replicate(master, replica, tempdir, 2, 0, true);
     TEST_EQUAL(count, 3);
     {
 	Xapian::Database dbcopy(replicapath);
@@ -370,11 +370,11 @@ DEFINE_TESTCASE(replicate2, replicas) {
 
     // Apply the replication - we don't have changesets stored, so this should
     // just do a database copy, and return a count of 1.
-    TEST_EQUAL(replicate(master, replica, tempdir, 0, 1, 1), 1);
+    TEST_EQUAL(replicate(master, replica, tempdir, 0, 1, true), 1);
     check_equal_dbs(masterpath, replicapath);
 
     // Replicate from the replica.
-    TEST_EQUAL(replicate(master2, replica2, tempdir, 0, 1, 1), 1);
+    TEST_EQUAL(replicate(master2, replica2, tempdir, 0, 1, true), 1);
     check_equal_dbs(masterpath, replica2path);
 
     orig.add_document(doc1);
@@ -383,7 +383,7 @@ DEFINE_TESTCASE(replicate2, replicas) {
     orig.commit();
 
     // Replicate from the replica - should have no changes.
-    TEST_EQUAL(replicate(master2, replica2, tempdir, 0, 0, 0), 1);
+    TEST_EQUAL(replicate(master2, replica2, tempdir, 0, 0, false), 1);
     check_equal_dbs(replicapath, replica2path);
 
     // Replicate, and replicate from the replica - should have 2 changes.
@@ -400,9 +400,9 @@ DEFINE_TESTCASE(replicate2, replicas) {
     orig.commit();
 
     // Replication should do a full copy.
-    TEST_EQUAL(replicate(master, replica, tempdir, 0, 1, 1), 1);
+    TEST_EQUAL(replicate(master, replica, tempdir, 0, 1, true), 1);
     check_equal_dbs(masterpath, replicapath);
-    TEST_EQUAL(replicate(master2, replica2, tempdir, 0, 1, 1), 1);
+    TEST_EQUAL(replicate(master2, replica2, tempdir, 0, 1, true), 1);
     check_equal_dbs(masterpath, replica2path);
 
     // Start writing changesets, but only keep 1 in history, and make a
@@ -427,9 +427,9 @@ DEFINE_TESTCASE(replicate2, replicas) {
     // is missing.
 
     //FIXME - the following tests are commented out because the backends don't currently tidy up old changesets correctly.
-    //TEST_EQUAL(replicate(master, replica, tempdir, 0, 1, 1), 1);
+    //TEST_EQUAL(replicate(master, replica, tempdir, 0, 1, true), 1);
     //check_equal_dbs(masterpath, replicapath);
-    //TEST_EQUAL(replicate(master2, replica2, tempdir, 0, 1, 1), 1);
+    //TEST_EQUAL(replicate(master2, replica2, tempdir, 0, 1, true), 1);
     //check_equal_dbs(masterpath, replica2path);
 
     // Need to close the replicas before we remove the temporary directory on
@@ -502,14 +502,14 @@ DEFINE_TESTCASE(replicate3, replicas) {
     orig.add_document(doc1);
     orig.commit();
 
-    TEST_EQUAL(replicate(master, replica, tempdir, 0, 1, 1), 1);
+    TEST_EQUAL(replicate(master, replica, tempdir, 0, 1, true), 1);
     check_equal_dbs(masterpath, replicapath);
 
     // Make a changeset.
     orig.add_document(doc1);
     orig.commit();
 
-    replicate_with_brokenness(master, replica, tempdir, 1, 0, 1);
+    replicate_with_brokenness(master, replica, tempdir, 1, 0, true);
     // Although it throws an error, the final replication in
     // replicate_with_brokenness() updates the database, since it's just the
     // end-of-replication message which is missing its body.
@@ -519,7 +519,7 @@ DEFINE_TESTCASE(replicate3, replicas) {
     // next replication.
     orig.add_document(doc1);
     orig.commit();
-    TEST_EQUAL(replicate(master, replica, tempdir, 1, 0, 1), 2);
+    TEST_EQUAL(replicate(master, replica, tempdir, 1, 0, true), 2);
 
     // Need to close the replicas before we remove the temporary directory on
     // Windows.
@@ -551,7 +551,7 @@ DEFINE_TESTCASE(replicate4, replicas) {
 
     // Apply the replication - we don't have changesets stored, so this should
     // just do a database copy, and return a count of 1.
-    int count = replicate(master, replica, tempdir, 0, 1, 1);
+    int count = replicate(master, replica, tempdir, 0, 1, true);
     TEST_EQUAL(count, 1);
     {
 	Xapian::Database dbcopy(replicapath);
@@ -564,7 +564,7 @@ DEFINE_TESTCASE(replicate4, replicas) {
     orig.commit();
 
     // Replicate, and check that we have the positional information.
-    count = replicate(master, replica, tempdir, 1, 0, 1);
+    count = replicate(master, replica, tempdir, 1, 0, true);
     TEST_EQUAL(count, 2);
     {
 	Xapian::Database dbcopy(replicapath);
@@ -580,7 +580,7 @@ DEFINE_TESTCASE(replicate4, replicas) {
     orig.commit();
 
     // Replicate, and check that we have the positional information.
-    count = replicate(master, replica, tempdir, 1, 0, 1);
+    count = replicate(master, replica, tempdir, 1, 0, true);
     TEST_EQUAL(count, 2);
     {
 	Xapian::Database dbcopy(replicapath);
@@ -600,7 +600,7 @@ DEFINE_TESTCASE(replicate4, replicas) {
     orig.commit();
 
     // Replicate, and check that we have the positional information.
-    count = replicate(master, replica, tempdir, 0, 1, 1);
+    count = replicate(master, replica, tempdir, 0, 1, true);
     TEST_EQUAL(count, 1);
     {
 	Xapian::Database dbcopy(replicapath);
@@ -643,7 +643,7 @@ DEFINE_TESTCASE(replicate5, replicas) {
 
     // Apply the replication - we don't have changesets stored, so this should
     // just do a database copy, and return a count of 1.
-    int count = replicate(master, replica, tempdir, 0, 1, 1);
+    int count = replicate(master, replica, tempdir, 0, 1, true);
     TEST_EQUAL(count, 1);
     {
 	Xapian::Database dbcopy(replicapath);
@@ -656,7 +656,7 @@ DEFINE_TESTCASE(replicate5, replicas) {
     orig.commit();
 
     // Replicate, and check that we have the positional information.
-    count = replicate(master, replica, tempdir, 1, 0, 1);
+    count = replicate(master, replica, tempdir, 1, 0, true);
     TEST_EQUAL(count, 2);
     {
 	Xapian::Database dbcopy(replicapath);
@@ -672,7 +672,7 @@ DEFINE_TESTCASE(replicate5, replicas) {
     orig.commit();
 
     // Replicate, and check that we have the positional information.
-    count = replicate(master, replica, tempdir, 1, 0, 1);
+    count = replicate(master, replica, tempdir, 1, 0, true);
     TEST_EQUAL(count, 2);
     {
 	Xapian::Database dbcopy(replicapath);
@@ -688,7 +688,7 @@ DEFINE_TESTCASE(replicate5, replicas) {
     orig.commit();
 
     // Replicate, and check that we have the positional information.
-    count = replicate(master, replica, tempdir, 1, 0, 1);
+    count = replicate(master, replica, tempdir, 1, 0, true);
     TEST_EQUAL(count, 2);
     {
 	Xapian::Database dbcopy(replicapath);
@@ -712,7 +712,7 @@ DEFINE_TESTCASE(replicate5, replicas) {
     orig.commit();
 
     // Replicate, and check that we have the positional information.
-    count = replicate(master, replica, tempdir, 1, 0, 1);
+    count = replicate(master, replica, tempdir, 1, 0, true);
     TEST_EQUAL(count, 2);
     {
 	Xapian::Database dbcopy(replicapath);
@@ -728,7 +728,7 @@ DEFINE_TESTCASE(replicate5, replicas) {
     orig.commit();
 
     // Replicate, and check that we have the positional information.
-    count = replicate(master, replica, tempdir, 1, 0, 1);
+    count = replicate(master, replica, tempdir, 1, 0, true);
     TEST_EQUAL(count, 2);
     {
 	Xapian::Database dbcopy(replicapath);
